<resources>
    <string name="app_name">Matheuriais de Construção</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="confsenha">Confirmar Senha</string>
    <string name="logar">Logar</string>
    <string name="cadastrese">Cadastre-se</string>
    <string name="cadastrobtn">Cadastre-se</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="cadastro">Cadastro</string>
    <string name="saudacao">Bem-vindo Fulano!</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="descricao">Nome do produto\nDescrição\nValor</string>
    <string name="categoria">Categoria</string>
    <string name="produto">Produto</string>
    <string name="atributos">Nome do produto:\nDescrição:\nQuantidade:\nMarca:\nValor:</string>

</resources>
