<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aluno.myapplication.Main2Activity"
    android:orientation="vertical">

    <TextView
        android:text="@string/cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cadastro"
        android:textSize="@dimen/campos"
        android:padding="20dp"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/nome"
        android:ems="10"
        android:id="@+id/nome" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/cpf"
        android:ems="10"
        android:id="@+id/cpf" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/email"
        android:ems="10"
        android:id="@+id/email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/senha"
        android:ems="10"
        android:id="@+id/senha"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/confsenha"
        android:ems="10"
        android:id="@+id/confirmarsenha" />

    <Button
        android:text="@string/cadastrobtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cadastrobtn"
		android:onClick="cadastrobtn"
        android:layout_marginTop="50dp"
        android:textSize="@dimen/logar"
        android:padding="20dp"/>

</LinearLayout>
