<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aluno.myapplication.MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:text="@string/login"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:id="@+id/logar"
        android:textSize="@dimen/campos"
        android:padding="20dp"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:layout_weight="0.01"
        android:hint="@string/email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/senha"
        android:layout_weight="0.01"
        android:hint="@string/senha"/>

    <TextView
        android:text="@string/cadastrese"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cadastro"
        android:textSize="@dimen/cadastro"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:onClick="cadastre_se"/>

    <Button
        android:text="@string/logar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="122dp"
        android:id="@+id/logar"
        android:layout_marginTop="105dp"
        android:textSize="@dimen/logar"
        android:onClick="logar"/>
	
	<Button
        android:text="@string/cadastrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="122dp"
        android:id="@+id/cadastrarse"
        android:layout_marginTop="105dp"
        android:textSize="@dimen/logar"
        android:onClick="cadastrarse"/>
	
</LinearLayout>
