<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/saudacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <SearchView
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:hint="@string/pesquisar"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imageView"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:text="Carrinho"
            android:layout_marginTop="20dp"/>


    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_weight="0.01"
            android:text="@string/produto"
            android:textSize="@dimen/logar"
            android:textAlignment="center"
            android:layout_marginTop="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:weightSum="1">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="180dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imageView3"
            android:layout_marginLeft="90dp"
            android:layout_weight="0.60"
            android:textAlignment="center"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_weight="0.01"
            android:text="Nome do produto:"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="5sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:text="Descrição:"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_weight="0.01"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="5sp"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:text="Quantidade:"
            android:layout_weight="0.01"
            android:layout_marginLeft="50dp"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:text="Marca:"
            android:layout_weight="0.01"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="5sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:text="Valor:"
            android:layout_weight="0.01"
            android:layout_marginLeft="50dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:text="Adicionar ao carrinho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:textAlignment="center"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20sp"/>

        <Button
            android:text="Voltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:layout_weight="1"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>

</LinearLayout>